--- a/Assignment2_SebastianSeck_MarvinKönig_VeraWeidmann.html
+++ b/Assignment2_SebastianSeck_MarvinKönig_VeraWeidmann.html
@@ -308,7 +308,9 @@ summary(mod1c)</code></pre>
 <pre><code>## [1] &quot;n: 1494&quot;</code></pre>
 <p>As mentioned in 2(b) the intercept of the model with the value of -39.74 is the value of nettfam while predictors are equal to 0. If one predictor is increased by one, e.g. one unit (1,000 dollars) more in inc, that nettfa will increase by <span class="math inline">\(\beta = 1.3\)</span> (1,300 dollars). The increase of one change in age depends on the value of age itself as the regression model included <span class="math inline">\(age^2\)</span>.</p>
 <p>The calculation of the turnaround point is $x = |  |= || = 21.51 $. This means starting with an age of 22 the nettfam will increase, before 22 the nettfam will decrease.</p>
-<p>The partial effect of age on nettfa for someone who is aged 30 years is: <span class="math inline">\(\frac{\delta nettfa}{\delta age}=\beta_2 + 2*\beta_3*age = -1.56905 + 2*0.03647*30 = 0.61915\)</span> (619 dollars)</p>
+<p>The partial effect of age on nettfa for someone who is aged 30 years is: <span class="math display">\[
+\frac{\delta nettfa}{\delta age}=\beta_2 + 2*\beta_3*age = -1.56905 + 2*0.03647*30 = 0.61915 = 619 Dollars
+\]</span></p>
 </div>
 <div id="d-regression-for-age-of-25" class="section level4">
 <h4>1(d) Regression for age of 25</h4>
@@ -351,7 +353,7 @@ mod1d &lt;- lm(nettfa ~ inc + age + age25, data = ksubs_1)
 <p>As the p-value of <span class="math inline">\(\theta_2 = 0.72294 &gt; 0.05\)</span> H0 cannot be rejected. This variable might not have an significant effect on the dependet variable nettfam.</p>
 <p>The lincom command (in R: car-package) can be used to model the equation by unsing the original one without modifing the model.</p>
 <p>HELP!!!</p>
-<p>lincom command??? Linear combinations of parameters -&gt; linear hypothesis- package: car? john foxed</p>
+<p>lincom command??? Linear combinations of parameters -&gt; linear hypothesis- package: car? john foxed Können es auch weg lassen nach Quari :D</p>
 <pre class="r"><code>library(multcomp)
 summary(glht(mod1c, linfct = c(&quot;age = 25&quot;)))</code></pre>
 <pre><code>## 
@@ -497,9 +499,13 @@ paste(&quot;The LM value is:&quot;, round(LM,2))</code></pre>
 <h4>2(b) WLS model</h4>
 <p>Due to the White Least Squares Estiation (WLS) Method data which underlyies heteroscedasticity can be transformed to a homoscedastic distibution. We assume <span class="math inline">\(Var(u_i|inc_i) = \sigma^2\)</span>. Therefore, we divide all variables by the squareroot of income.</p>
 <p>Heteroscedastic model:</p>
-<p><span class="math inline">\(nettfa= \beta_0 + \beta_1 * inc + \beta_2 * (age-25)^2 + \beta_3 * e401k + u\)</span></p>
+<p><span class="math display">\[
+nettfa= \beta_0 + \beta_1 * inc + \beta_2 * (age-25)^2 + \beta_3 * e401k + u
+\]</span></p>
 <p>Transformed/ homosceadstic model:</p>
-<p><span class="math inline">\(\frac{nettfa}{\sqrt{inc}}= \beta_0 * \frac{1}{\sqrt{inc}}+ \beta_1 * \frac{inc}{\sqrt{inc}} + \beta_2 * \frac{(age-25)^2}{\sqrt{inc}} + \beta_3 * \frac{e401k}{\sqrt{inc}} + u\)</span></p>
+<p><span class="math display">\[
+\frac{nettfa}{\sqrt{inc}}= \beta_0 * \frac{1}{\sqrt{inc}}+ \beta_1 * \frac{inc}{\sqrt{inc}} + \beta_2 * \frac{(age-25)^2}{\sqrt{inc}} + \beta_3 * \frac{e401k}{\sqrt{inc}} + u
+\]</span></p>
 <p>Manually, we could create new variables by calculating each used variable divided by <span class="math inline">\(\sqrt{inc}\)</span>. In addition, we have to adjust <span class="math inline">\(\beta_0\)</span> by <span class="math inline">\(\frac{1}{\sqrt{inc}}\)</span>.</p>
 <p>However, to run a WLS model in R, we just have to assign the weight to the regression command. In this case the weight is $h = inc.</p>
 <pre class="r"><code>mod2b &lt;- lm(nettfa ~ inc + age25 + e401k, data = ksubs_2, weights = 1/ksubs_2$inc)
